Mon Jun 14 16:16:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/inet.mpc:
	* bin/MakeProjectCreator/config/inet.mpb:
	  Avoid WinCE.

Mon Jun 14 14:16:35 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Adjusted the VMS compatibility work-around from
          Wed Jun  9 14:45:33 UTC 2010  Adam Mitz  <mitza@ociweb.com>
          so that it excludes more GNU make constructs that the version
          on VMS can't handle.

Mon Jun 14 10:06:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Updated Xampler links, one for PS3, one for IBM Cell

Mon Jun 14 09:13:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/URLBase.h:
          Fixed single thread compile problem.

Sun Jun 13 18:14:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Integrated following changes from David Ward <dpward at mit dot edu>
          Updates the RPM SPEC file to fix the build on several platforms,
          and to otherwise clean it up:
          - Depend on redhat-rpm-config to fix BuildArch under Fedora
          - Depend on elfutils to allow build of debuginfo package under RHEL 4
          - Replace %{?fedora_version} with %{?fedora} and %{?mandriva_version}
            with %{?mdkversion} [1]
          - Replace %{defined ...} with 0%{?...} and %{undefined ...}
            with 0%{!?...} for portability [1]
          - Move mwc (and autoconf/configure) step from %prep to %build [2]
          - For _with_autoconf: Perform configure in $ACE_ROOT/objdir as
            suggested by configure, to keep the build underneath $ACE_ROOT
          - For _with_autoconf: Pass additional options to configure, to install
            files in the correct location (i.e. /usr/lib64 rather than
            /usr/lib in 64-bit multilib environments)